--- a/app/login.html
+++ b/app/login.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-EZGQCMWDJ7"
+      src="https://www.googletagmanager.com/gtag/js?id=G-29XCDMCSCD"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-EZGQCMWDJ7');
+      gtag('config', 'G-29XCDMCSCD');
     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,20 +31,6 @@
 
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Login | OVERDOME</title>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=AW-11161899421"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'AW-11161899421');
-    </script>
   </head>
 
   <body>
