--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-EZGQCMWDJ7"
+      src="https://www.googletagmanager.com/gtag/js?id=G-29XCDMCSCD"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-EZGQCMWDJ7');
+      gtag('config', 'G-29XCDMCSCD');
     </script>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -53,26 +53,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <!-- Responsive CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" />
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=AW-11161899421"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'AW-11161899421');
-    </script>
-    <!-- Event snippet for Page view conversion page -->
-    <script>
-      gtag('event', 'conversion', {
-        send_to: 'AW-11161899421/fyTyCJik3ZAZEJ2jtMop',
-      });
-    </script>
   </head>
   <!-- background: radial-gradient(rgb(35 0 27), rgb(10 6 0)) 100% 100%; -->
   <body data-spy="scroll" data-offset="80" style="background: #0a0a0a">
