--- a/app/privacy-policy.html
+++ b/app/privacy-policy.html
@@ -4,7 +4,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-EZGQCMWDJ7"
+      src="https://www.googletagmanager.com/gtag/js?id=G-29XCDMCSCD"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-EZGQCMWDJ7');
+      gtag('config', 'G-29XCDMCSCD');
     </script>
     <!-- Required meta tags -->
     <meta charset="UTF-8" />
@@ -34,20 +34,6 @@
     <!-- Core Css -->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Privacy Policy for Overdome Platform | Overdome</title>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=AW-11161899421"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'AW-11161899421');
-    </script>
   </head>
 
   <body>
